# sherpa-onnx

./: .gitignore  CMakeLists.txt  DOCKER_PGVECTOR_README.md  Dockerfile  build-wasm-simd-asr-yd.sh
.github/workflows/: a-build-pg15-vector.yaml  a-export-whisper-to-onnx.yaml  a-ffmpeg-examples-windows.yaml  c-api.yaml  export-whisper-to-onnx.yaml  ffmpeg.yaml  wasm-simd-hf-space-en-asr-whisper-yd-2.yaml  wasm-simd-hf-space-en-asr-whisper-yd.yaml  wasm-simd-hf-space-en-asr-zipformer-yd-2.yaml  wasm-simd-hf-space-en-asr-zipformer.yaml
.trae/documents/: Sherpa-ONNX与Whisper.cpp WebAssembly性能比较分析.md  plan_20260204_141457.md  plan_20260206_110251.md  plan_20260206_113839.md  plan_20260206_122322.md  plan_20260206_130034.md  plan_20260206_130534.md  plan_20260206_143151.md  plan_20260206_145830.md  plan_20260206_152136.md  plan_20260206_153846.md  plan_20260206_164404.md  plan_20260206_171503.md  plan_20260206_181604.md  plan_20260206_183031.md  plan_20260206_184909.md  plan_20260207_061954.md  plan_20260207_070401.md  plan_20260207_074848.md  plan_20260207_084548.md  plan_20260207_091519.md  plan_20260207_094300.md  plan_20260207_103342.md
English-Resource-Processing/: .gitignore  batch-convert.js  compare_accuracy.py  config.js  index.js  package.json  readme_yd.txt  readme_yd_2.md  scan-videos.js  test-sherpa-api.js  test-transcribe.js  transcribe-audio-sense.js  transcribe-audio.js  项目计划.md
English-Resource-Processing/a_rights/v3/: video2.srt  video4.srt  video6.srt
English-Resource-Processing/audio-transcriber/: README.md  README_CN.md  package.json
English-Resource-Processing/audio-transcriber-all/: accuracy_ranking.json  check_small_accuracy.js  check_tiny_accuracy.js  compare_accuracy.js  compare_accuracy_v2.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-base/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-base/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-base/src/: transcriber.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-moonshine-base-int8/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-moonshine-base-int8/src/: sherpa-onnx-node.d.ts  transcriber.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-moonshine-tiny-int8/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-moonshine-tiny-int8/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-moonshine-tiny-int8/src/: index.ts  transcriber.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-small/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-small/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-small/src/: sherpa-onnx-node.d.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-tiny/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-tiny-v4/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-tiny-v4/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-tiny-v4/src/: transcriber.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-tiny/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/: compare_vad_configs.js  package.json  test.js  test_vad_optimized.js  vad_optimization_result.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer-ctc/: package.json  test.js
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer-ctc/files/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer-ctc/src/: sherpa-onnx-node.d.ts  transcriber.ts
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/files/: video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/files/vad_aggressive/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/files/vad_optimized/: video2.json  video4.json  video6.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/files/vad_original/: video2.json  video4.json
English-Resource-Processing/audio-transcriber-all/audio-transcriber-zipformer/src/: sherpa-onnx-node.d.ts  transcriber.ts
English-Resource-Processing/screenshot-scripts/: copy-to-transcription2.js  generate-screenshots.js
English-Resource-Processing/video-converter/: README.md  README_CN.md  package.json
English-Resource-Processing/video-converter/src/: converter.ts  index.ts
ffmpeg-examples-windows/: CMakeLists.txt  README.md  run.ps1  sherpa-onnx-ffmpeg.c
nodejs-addon-examples/: test_asr_streaming_transducer_yd.js  test_vad_with_non_streaming_asr_whisper_yd.js  test_whisper_yd.js  transcription_result.txt  transcription_vad_whisper_result.txt  transcription_whisper_result.txt  操作手册.md
sherpa-onnx/c-api/: CMakeLists.txt
wasm/: CMakeLists.txt
wasm/asr-yd/: CMakeLists.txt  app-asr.js  index.html
